# agentic-chat-interface

./: .gitignore  mcp_config.json
.specify/: feature.json
frontend/: .env.example  FRONTEND_SPEC.md  package-lock.json  package.json
gateway-node/: .env.example  db.js  jest.setup.js  (+4 more)
service-ai/: .env.example  README.md  pyproject.toml  requirements.txt
service-ai/app/: main.py
service-ai/app/agents/: domain_agents.py  swarm.py  triage_agent.py
service-ai/app/api/: deps.py
service-ai/app/api/routes/: __init__.py  audio.py  chat.py  files.py  health.py  sse.py  stream.py  users.py  vision.py
service-ai/app/core/: config.py  llm_proxy.py  logging.py  type_guards.py
service-ai/app/schemas/: chat.py  streaming.py
service-ai/app/services/: file_service.py  history_service.py  mcp_service.py  memory_service.py  streaming_service.py  user_service.py
service-ai/app/workers/: media_worker.py
service-ai/fastapi-openai-chat-review/: SKILL.md
service-ai/fastapi-openai-chat-review/agents/: openai.yaml
service-ai/fastapi-openai-chat-review/references/: openai-chat-contract.md
service-ai/fastapi-openai-chat-review/scripts/: review_fastapi_openai_chat.py
service-ai/tests/: conftest.py
service-ai/tests/contract/: test_health.py
service-ai/tests/integration/: test_api_endpoints.py  test_async_streaming.py  test_config.py  test_hardening.py  test_history_mongodb.py  test_history_service.py  test_memory_tools.py  test_phase3_features.py  test_services.py  test_swarm_handoff.py  test_triage_routing.py
service-ai/tests/unit/: test_logging.py  test_tools.py
(+98 files in other folders)
