[project]
name = "service-ai"
version = "0.1.0"
description = "Agentic AI microservice — FastAPI + LiteLLM + mem0 + openai-agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "litellm>=1.83.14",
    "mem0ai>=2.0.2",
    "openai-agents>=0.10.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sse-starlette>=3.4.2",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
start = "app.main:run"

[tool.uv]
dev-dependencies = ["httpx>=0.28.0", "pytest>=9.0.3", "pytest-asyncio>=0.26.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
